[package]
name = "rusty_mines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
owo-colors = "3.4.0"

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]

[dependencies.clap]
version = "3.2.16"
features = ["derive"]
